# contract_automation_project

./: .env  main.py  pyproject.toml  requirements.txt
src/: logger.py  main.py
src/pipedrive/: auth.py  data_capture.py  poller.py  schemas.py  test_datacapture.py  test_pipedrive.py
